--- a/src/component/title.hbs
+++ b/src/component/title.hbs
@@ -1,12 +1,3 @@
-<section>
-  {{#with data}}
-    <div>
-      <h2>{{title}}</h2>
-    </div>
-    <div>
-      <p>
-        {{text}}
-      </p>
-    </div>
-  {{/with}}
-</section>
+<div>
+  <h2>{{data}}</h2>
+</div>
