--- a/src/container/summary.hbs
+++ b/src/container/summary.hbs
@@ -18,8 +18,28 @@
   </header>
 
   <main>
-    {{>title data=summary}}
-    {{>title data=experience}}
+    <section>
+    {{#with summary}}
+      {{>title data=title}}
+    <div>
+      <p>
+        {{text}}
+      </p>
+    {{/with}}
+    </div>
+
+</section>
+    <section>
+    {{#with experience}}
+      {{>title data=title}}
+    <div>
+      <p>
+        {{text}}
+    {{/with}}
+      </p>
+    </div>
+
+</section>
   </main>
 
   <footer>
