--- a/src/component/link.hbs
+++ b/src/component/link.hbs
@@ -1,1 +1,7 @@
-<a href='{{data.href}}'>{{data.text}}</a>
+<a href="{{href}}" {{#if blank}} target="_blank" {{/if}}>{{text}}</a> 
+
+{{#if line}}
+---
+{{else}}
+/
+{{/if}}
