work page added

--- a/src/container/summary.hbs
+++ b/src/container/summary.hbs
@@ -9,7 +9,7 @@
   <main>
     <section>
     {{#with summary}}
-      {{>title data=title}}
+      {{>title big=true data=title}}
     <div>
       <p>
         {{text}}
