--- a/src/container/skils.hbs
+++ b/src/container/skils.hbs
@@ -6,12 +6,31 @@
 <div>
   {{#with main}}
   <main>
- {{>title data='All skils'}}
-    <ul>
-      {{#each skils}}
-      <li>{{this}}</li>
-      {{/each}}
-    </ul>
+    <section>
+      {{>title big=true data='All skils'}}
+      <ul>
+        {{#each skils}}
+        <li>
+            {{name}}
+            {{#if point includeZero=true}} ({{point}}) {{/if}} 
+            {{#if isTop}} (TOP) {{/if}}
+            {{#unless point includeZero=true}}(not learn){{/unless}}
+            {{#unless point}} {{#if point includeZero=true}} (still learn) {{/if}} {{/unless}}
+          </li>
+        {{/each}}
+      </ul>
+    </section>
+    <section>
+      {{>title data='My hobbies'}}
+      <ol>
+        {{#each hobbies}}
+        <li>
+            {{name}}
+            {{#if isMain}} (favourite) {{/if}} 
+          </li>
+        {{/each}}
+      </ol>
+    </section>
 
   </main>
   {{/with}}
