--- a/src/layout/bootstrap.hbs
+++ b/src/layout/bootstrap.hbs
@@ -11,7 +11,7 @@
     </title>
     <meta charset='utf-8' />
     <link href='css/index.css' rel='stylesheet' />
-        <link
+    <link
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css'
       rel='stylesheet'
       integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
@@ -19,11 +19,10 @@
     />
   </head>
 
-
+  <body>
 
     {{!  ↓  ця кострукція показує куди шаблонізатору треба вставляти код з container файлу   }}
     {{{body}}}
-
 
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'
