--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,18 +1,152 @@
 <main>
-  <h1>Hello world</h1>
-  <h2>second</h2>
-  <h3>3 title</h3>
-  <hr />
-  <div class='display-1 text-muted'>Hello again</div>
-  <div class='display-5'>second</div>
-  <hr />
-  <button class='btn btn-primary'>
-    <span class='text-uppercase'>Button primary</span>
-  </button>
-  <hr />
-  <div class='card'>
-    <div class='card-body'>
-      content
-    </div>
+  <div class='row gy-5'>
+    <section class='col-12'>
+      <div class='card text-bg-dark'>
+        <img
+          class='card-img-top'
+          src='https://picsum.photos/400/200'
+          alt='picture'
+        />
+        <div class='card-body'>
+
+          <div
+            class='card-title text-bg-primary'
+          >Title</div>
+          <p>DFDF DFDF ynhnbg rf 34 fd jhjhjyyh fgfgfgfg gg</p>
+          <a href='#' class='btn btn-primary'>Open</a>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <div class='card'>
+        <div class='card-header'>
+          <div>Menu</div>
+        </div>
+        <ul class='list-group list-group-flush'>
+          <li class='list-group-item'><a href='#'>Home page</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Summary</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Skills</a></li>
+        </ul>
+        <div class='card-footer'>
+          <button class='btn btn-dark btn-sm'>Update list</button>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <table class='table table-striped'>
+        <thead>
+          <tr>
+            <th> #id </th>
+            <th>name</th>
+            <th>age</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Jhon</td>
+            <td>35</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Ivan</td>
+            <td>29</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class='col-12'>
+      <div class='row gx-2 gy-3'>
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
   </div>
+
 </main>
