--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,7 +1,6 @@
     {{#with footer}}
         <footer>
-          <hr />
-          <br />
+          <hr class="my-5" />
           <div>
           {{#with social}}
               {{>link text=email.text href=email.href blank=true }} 
@@ -9,9 +8,7 @@
               {{>link text=linkedin.text href=linkedin.href blank=true noLine=true}}
           {{/with}}
           </div>
-          <br />
-          <div><em>Copyright by {{../header/name/firstname}} {{../header/name/lastname}}</em></div>
-          <br />
+          <div class="my-3"><em>Copyright by {{../header/name/firstname}} {{../header/name/lastname}}</em></div>
           <div><address>{{../header/address}}</address></div>
       </footer>
     {{/with}}
