--- a/src/container/summary.hbs
+++ b/src/container/summary.hbs
@@ -7,7 +7,7 @@
 
     {{#with main}}
   <main>
-    <section>
+    <section class="mb-3">
     {{#with summary}}
       {{>title big=true data=title}}
     <div>
