--- a/src/layout/default.hbs
+++ b/src/layout/default.hbs
@@ -18,23 +18,21 @@
   <body>
     {{#with header}}
     <header>
-      <div>
+      <div class="mb-2">
         <h1>{{name.firstname}}
           {{name.lastname}}{{title}}</h1>
       </div>
-      <div>
+      <div class="mb-2">
         <b>{{position}}</b>
       </div>
-      <br />
-      <div><em>{{salary}}</em></div>
-      <br />
-      <div><address>{{address}}</address></div>
-      <br />
-      <hr />
+      <div class="mb-2"><em>{{salary}}</em></div>
+      <div class="mb-2"><address>{{address}}</address></div>
+      <hr  class="my-5" />
     </header>
     {{/with}}
-
-    {{> nav}}
+    <div class="mb-5">
+        {{> nav}}
+    </div>
 
     {{!  ↓  ця кострукція показує куди шаблонізатору треба вставляти код з container файлу   }}
     {{{body}}}
