--- a/src/container/shopproduct.hbs
+++ b/src/container/shopproduct.hbs
@@ -2,18 +2,8 @@
 Це код container файлу для summary сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 }}
-<header>
-  <div class='nav pb-5'>
-    {{#with navigation}}
-      {{#each links}}
-        <div class="nav-item">
-                <a class="nav-link" href='{{href}}'>{{text}}</a>
-        </div>
-      {{/each}}
-      <div class="nav-item"></div>
-      <a href="#" class="nav-link disabled">Disabled</a>
-    {{/with}}
-  </div>
+
+<main>
 
 <div class="breadcrumb pb-3">
   {{#each breadcrumb}}
@@ -116,71 +106,23 @@
 
 {{#with goodsOtherBlock}}
   <h2 class="text-center">{{title}}</h2>
+  
+  
   <div class="row gx-2 gy-4">
     {{#each cards}}
-      <div class="col-4">
-        <div class="card">
-          <img src="{{image}}" alt="{{title}} photo">
-          <div class="card-body">
-            <div class="card-title">
-              <h5>{{title}}</h5>
-              
-              {{#if isHot}} <div class="badge rounded-pill text-bg-warning text-uppercase">Hot!</div>{{/if}}
-              {{#if isNew}}<div class="badge rounded-pill text-bg-primary">New</div>{{/if}}
-            </div>
-            <p>{{description}}</p>
-          </div>
-        </div>
-      </div>
+        {{> shopcard}}
     {{/each}}
   </div>
 
 
 {{/with}}
 
-<hr class="my-5">
-
-
-
-  {{#with service}}
-  <div class="col-12">
-    <div class="card text-bg-success">
-      <div class="card-body text-center p-2">
-      <div class="card-title"><h2>{{title}}</h2></div>
-      <p class="mb-0 mt-3">{{description}}</p>
-      {{#each buttons}}
-      <div>
-      <button href='{{link}}' class="btn btn-primary btn-sm mt-2">{{text}}</button>
-      </div>
-      {{/each}}
-      </div>
-    </div>
-  </div>
-  {{/with}}
-
-  <hr class="my-5">
+{{> shopaction}}
 
 </main>
-<footer>
 
-   
-      
-  <div class="row">
-    {{#each footer}}
-      <div class="col-2 p-0">
-        {{#each this}}
-          <div class="nav flex-column">
-            <div class="nav-item">
-              <a class="nav-link px-0
-                      {{#if @last}} disabled {{/if}}
-                  " href="{{link}}">{{text}}</a>
-            </div>
-          </div>
-        {{/each}}
-      </div>
-    {{/each}}
-  </div>    
-</footer>
+
+
 
 
 
