shopnews page is done

--- a/src/component/shopheader.hbs
+++ b/src/component/shopheader.hbs
@@ -2,11 +2,12 @@
 
   <div class='row'>
     <div class='col-4'>
-      <img
+      {{! <img
         class='ms-5'
         src='https://picsum.photos/150/60'
         alt='Logo'
-      />
+      /> }}
+      <h3>Logo</h3>
     </div>
     <div class='col-8'>
       <div class='nav text-end pb-5'>
