--- a/src/container/shopproduct.hbs
+++ b/src/container/shopproduct.hbs
@@ -5,12 +5,7 @@
 
 <main>
 
-<div class="breadcrumb pb-3">
-  {{#each breadcrumb}}
-  
-    <a class="breadcrumb-item" href="{{url}}">{{name}}</a>
-  {{/each}}
-</div>
+{{> breadcrumb}}
 
 <div class="row">
   <div class="col-6">
