--- a/src/component/shopheader.hbs
+++ b/src/component/shopheader.hbs
@@ -10,7 +10,7 @@
       <h3>Logo</h3>
     </div>
     <div class='col-8'>
-      <div class='nav text-end pb-5'>
+      <div class='nav text-end'>
         {{#with navigation}}
           {{#each links}}
             <div class='nav-item'>
@@ -26,5 +26,6 @@
       </div>
     </div>
   </div>
+  <hr />
 
 </header>
