--- a/src/container/bootstrapOld.hbs
+++ b/src/container/bootstrapOld.hbs
@@ -16,3 +16,233 @@
     </div>
   </div>
 </main>
+
+{{! ======================== }}
+
+<main>
+  <div class='row gy-5'>
+    <section class='col-12'>
+      <div class='card text-bg-dark'>
+        <img
+          class='card-img-top'
+          src='https://picsum.photos/400/200'
+          alt='picture'
+        />
+        <div class='card-body'>
+
+          <div
+            class='card-title text-bg-primary'
+          >Title</div>
+          <p>DFDF DFDF ynhnbg rf 34 fd jhjhjyyh fgfgfgfg gg</p>
+          <a href='#' class='btn btn-primary'>Open</a>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <div class='card'>
+        <div class='card-header'>
+          <div>Menu</div>
+        </div>
+        <ul class='list-group list-group-flush'>
+          <li class='list-group-item'><a href='#'>Home page</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Summary</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Skills</a></li>
+        </ul>
+        <div class='card-footer'>
+          <button class='btn btn-dark btn-sm'>Update list</button>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <table class='table table-striped'>
+        <thead>
+          <tr>
+            <th> #id </th>
+            <th>name</th>
+            <th>age</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Jhon</td>
+            <td>35</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Ivan</td>
+            <td>29</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class='col-12'>
+      <div class='row gx-2 gy-3'>
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+  </div>
+
+</main>
+
+{{! ======================== }}
+
+<main>
+
+  <div class='row g-4'>
+    <div class='col-12'>
+      <div class='nav nav-tabs'>
+        <div class='nav-item'>
+          <a href='#' class='nav-link active'>Home Page</a>
+        </div>
+        <div class='item'>
+          <a href='#' class='nav-link'>Catalog</a>
+        </div>
+        <div class='item'>
+          <a href='#' class='nav-link disabled'>FAQ</a>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class='col-4'>
+      <div class='card'>
+        <div class='card-body'>
+          <div class='nav flex-column'>
+            <div class='card my-1'>
+              <div class='nav-item'>
+                <a href='#' class='nav-link'>Home Page</a>
+              </div>
+            </div>
+            <div class='item'>
+              <div class='card my-1'>
+                <a href='#' class='nav-link'>Catalog</a>
+              </div>
+            </div>
+            <div class='item'>
+              <div class='card my-1'>
+                <a
+                  href='#'
+                  class='nav-link disabled'
+                >FAQ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class='col-4'>
+      <ol class='breadcrumb'>
+        <li class='breadcrumb-item'>
+          <a href='#'> Home</a></li>
+        <li class='breadcrumb-item'>
+          <a href='#'> PC </a></li>
+        <li class='breadcrumb-item'>
+          <a href='#'> MacBook </a></li>
+      </ol>
+
+      <div class='row'>
+        <div class='col-12'>
+          <h6>Hello world
+            <span
+              class='badge text-bg-warning rounded-pill text-uppercase'
+            > топ продаж</span>
+          </h6>
+          <button
+            class='btn btn-primary rounded-pill mb-3'
+          >Click Me!</button>
+          <div class='alert alert-primary'>Impotant info!</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</main>
