--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,72 +1,89 @@
-<main>
-
-  <div class='row g-4'>
+<main class='p-5'>
+  <div class='row g-5'>
     <div class='col-12'>
-      <div class='nav nav-tabs'>
-        <div class='nav-item'>
-          <a href='#' class='nav-link active'>Home Page</a>
-        </div>
-        <div class='item'>
-          <a href='#' class='nav-link'>Catalog</a>
-        </div>
-        <div class='item'>
-          <a href='#' class='nav-link disabled'>FAQ</a>
-        </div>
-      </div>
-    </div>
-    <br />
-    <div class='col-4'>
-      <div class='card'>
-        <div class='card-body'>
-          <div class='nav flex-column'>
-            <div class='card my-1'>
-              <div class='nav-item'>
-                <a href='#' class='nav-link'>Home Page</a>
-              </div>
-            </div>
-            <div class='item'>
-              <div class='card my-1'>
-                <a href='#' class='nav-link'>Catalog</a>
-              </div>
-            </div>
-            <div class='item'>
-              <div class='card my-1'>
-                <a
-                  href='#'
-                  class='nav-link disabled'
-                >FAQ</a>
-              </div>
-            </div>
+      <form action=''>
+        <div>
+          <label for='form-label'>Email address</label>
+          <input class='form-control' type='text' />
+          <div class='form-text text-danger'>Error. You need
+            to set correct email
           </div>
         </div>
-      </div>
+      </form>
     </div>
 
-    <div class='col-4'>
-      <ol class='breadcrumb'>
-        <li class='breadcrumb-item'>
-          <a href='#'> Home</a></li>
-        <li class='breadcrumb-item'>
-          <a href='#'> PC </a></li>
-        <li class='breadcrumb-item'>
-          <a href='#'> MacBook </a></li>
-      </ol>
-
-      <div class='row'>
-        <div class='col-12'>
-          <h6>Hello world
-            <span
-              class='badge text-bg-warning rounded-pill text-uppercase'
-            > топ продаж</span>
-          </h6>
-          <button
-            class='btn btn-primary rounded-pill mb-3'
-          >Click Me!</button>
-          <div class='alert alert-primary'>Impotant info!</div>
+    <hr />
+    <div class='row py-5'>
+      <div class='col-3 pt-2'>
+        <label for='form-label'>Email address</label>
+      </div>
+      <div class='col-5'>
+        <input class='form-control' type='text' />
+      </div>
+      <div class='col-4 pt-2'>
+        <div class='form-text text-danger'>Error. You need
+          to set correct email
         </div>
       </div>
     </div>
+  
+    <div class='col-12'>
+      <form action=''>
+        <div>
+          <label for='form-label'>Select role</label>
+          <select class='form-select' type='text' />
+            <option selected value="">Open list</option>
+            <option value="">Admin</option>
+            <option value="">User</option>
+          </select>
+          <div class='form-text text-danger'>Error. You need
+            to set correct email
+          </div>
+        </div>
+      </form>
+    </div>
 
-  </div>
+    <hr>
+
+    <div class='col-6'>
+      <div class="form-check">
+        <label for="" class="form-check-label">Apple</label>
+        <input name="food" type="radio" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Orange</label>
+        <input name="food" type="radio" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Banana</label>
+        <input name="food" type="radio" class="form-check-input">
+      </div>
+    </div>
+
+        <hr>
+
+    <div class='col-6'>
+      <div class="form-check">
+        <label for="" class="form-check-label">Apple</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Orange</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Banana</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+    </div>
+
+        <hr>
+
+    <div class='col-6'>
+      <div class="form-check form-switch">
+        <label for="" class="form-check-label">Get bonus</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+    </div>
 
 </main>
