--- a/src/container/shopcart.hbs
+++ b/src/container/shopcart.hbs
@@ -14,30 +14,9 @@
         
         
     {{#each goodsBlock}}
-    <div class="card m-0">
-     <div class="card-body p-2 m-0"> 
-      <div class="row g-0">
 
-          <div class="col-2"><img src="{{image}}" alt="{{name}} photo" width="100"></div>
-          <div class="col-4">
-              <h3>{{name}}</h3>
-              {{description}}
-          </div>
-          <div class="col-2 ps-4"> <br> {{price.title}}: <br> <b>{{price.value}}</b> </div>
-          <div class="col-2 ps-4"> <br><br>{{amount}} </div>
-          <div class="col-2"> 
-            {{#each buttons}}
-            <button class="btn 
-                {{#if isPrimary}} btn-primary {{/if}}
-                {{#if isDanger}} btn-outline-danger {{/if}}      
-            mx-0 my-2">{{text}}</button>
-            {{/each}}
-          </div>
-        
-
-      </div>
-     </div>
-    </div>
+      {{> cartGoodItem}}
+      
     {{/each}}
 
 <hr class="my-5">
