template for sopprofile

--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -6,11 +6,12 @@
           <label for='form-label'>Email address</label>
           <input class='form-control' type='text' />
           <div class='form-text text-danger'>Error. You need
-            to set correct email
+            to set correct email 
           </div>
         </div>
       </form>
     </div>
+    <div><i class="bi bi-basket2-fill"></i></div>
 
     <hr />
     <div class='row py-5'>
