--- a/src/container/shopcatalog.hbs
+++ b/src/container/shopcatalog.hbs
@@ -8,9 +8,124 @@
   {{> breadcrumb}}
 
   <h1>{{header}}</h1>
-  <div class="my-5">
-    <div></div>
 
+    <div class="row g-2 my-3">
+      {{#each sortBlock}}
+        <div class="col-3">
+          <select class="form-select form-select-sm" name="" id="" >
+            <option selcted>{{placeholder}}</option>
+            {{#each options}}
+              <option value="{{value}}">{{text}} </option>
+            {{/each}}
+          </select>
+        </div>
+      {{/each}}
+    </div>
+
+
+  <div class="row g-2 my-3">
+    
+    <div class="col-4">
+      <div class="card me-0">        
+        <div class="card-body">
+          {{#with filterBlock}}
+            {{#with sellers}}
+            <div>{{title}}</div>
+            {{#each list}}  
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="" >
+              <label class="form-check-label" for="">{{value}}</label>
+            </div>
+            {{/each}}
+            {{/with}}
+            <hr>
+        
+            {{#with brands}}
+            <div>{{title}}</div>
+            <input class="form-control" type="text" placeholder="{{input.placeholder}}">
+
+
+            {{#each options}}  
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="" >
+              <label class="form-check-label" for="">{{value}}</label>
+            </div>
+            {{/each}}
+            {{/with}}
+            <hr>
+
+            {{#with price}}
+            <div>{{title}}</div>
+            <input class="form-control form-control-sm mt-2" type="text" placeholder="{{range.from}}">
+            <input class="form-control form-control-sm mt-2" type="text" placeholder="{{range.to}}">
+            <div class="mt-2"><button class="btn btn-outline-dark btn-sm" href=" {{button.link}} ">{{button.text}}</button> </div>
+            {{/with}}
+            <hr>
+
+            {{#each filterList}}
+            <div>{{title}}</div>
+            {{#each options}}  
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="" >
+              <label class="form-check-label" for="">{{value}}</label>
+            </div>
+            {{/each}}
+            <hr>
+            {{/each}}
+
+          {{/with}}
+
+        </div>
+      </div>
+    </div>
+   
+    <div class="col-8">
+      <div class="row g-2">
+      {{#each goodsList}}
+      <div class="col-6">
+        <div class='card mb-3'>
+          <img src='{{img}}' alt='photo' />
+            <div class='card-body pt-1'>
+            <div class='card-title'>
+              <div>
+                {{#if isHot}} <span 
+                  class='badge rounded-pill text-bg-warning text-uppercase'>Hot!</span>
+                {{/if}}
+                {{#if isNew}} 
+                  <span class='badge rounded-pill text-bg-primary '> New!</span>
+                {{/if}}
+              </div>
+                {{#if isFast}} <div
+            class='badge text-bg-success px-0 mx-0 mt-3'
+          >Швидка доставка</div>{{/if}}
+                {{#if isNew}}<div
+            class='badge text-bg-secondary px-0 mt-2'
+          >Безкоштовна доставка</div>{{/if}}
+              
+
+              <h5 class="mt-3">{{name}}</h5>
+              <div>{{review.amount}} {{review.text}}</div>
+              <div class="display-6">{{price}}</div>
+              <div>{{delivery}}</div>
+              {{#each buttons}}
+                <button class="btn 
+                    {{#if isPrimary}} btn-primary {{/if}}
+                    {{#if isSecondary}} btn-secondary {{/if}}
+                mt-2" href="{{link}}">{{text}} </button>
+              {{/each}}
+              <ul class="mt-2">
+                {{#each characteristics}}
+                  <li>{{title}}: {{value}}</li>
+                {{/each}}
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+  </div>
+  
   </div>
 
 
