--- a/src/component/nav.hbs
+++ b/src/component/nav.hbs
@@ -1,6 +1,7 @@
-    <nav>
-      {{>link text='Summary' href='/summary' line=true}}
-      {{>link text='Skils' href='/skils' line=true}}
-      {{>link text='Education' href='/education' line=true}}
-      {{>link text='Work' href='/work' line=true noLine=true }}
-    </nav>
+<nav class='nav'>
+  <a class='nav-link' href='/'>🚪</a>
+  <a class='nav-link' href='/summary'>Summary</a>
+  <a class='nav-link' href='/skills'>Skills</a>
+  <a class='nav-link' href='/education'>Education</a>
+  <a class='nav-link' href='/work'>Work</a>
+</nav>
