--- a/src/container/person.hbs
+++ b/src/container/person.hbs
@@ -67,7 +67,7 @@
                         <ul>
                           {{#each team_members}}
                             <li>{{title}} <b>{{name}}</b> (<email>{{email}}</email>)
-                            <small><div><b><u>Skils:</u></b><ul>
+                            <small><div><b><u>Skills:</u></b><ul>
                               {{#each skills}}
                               <li>{{this}}</li>
                               {{/each}}
