--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -7,9 +7,9 @@
   {{#with main}}
   <main>
     <section>
-      {{>title big=true data='All skils'}}
+      {{>title big=true data='All skills'}}
       <ul>
-        {{#each skils}}
+        {{#each skills}}
         <li>
             {{name}}
             {{#if point includeZero=true}} ({{point}}) {{/if}} 
