--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -3,52 +3,195 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  }}
 
-
-  
-  <div class="row">
-    <div class="col-6">
-      <div>
-        Oleksiy Verkhulevskyy
-      </div>
-    </div>
-    <div class="col-6">
-      <div>
-          Resume project
-      </div>
-    </div>
-    </div>
-  </div>
-
-
 <main>
-  
-  <h1>Page list</h1>
-  <p>This is a summary of a project that demonstrates my capabilities as a layout designer</p>
 
-<div class="row g-2">
-  <div class="col-4">
-    <div class="card">
-      <div class="card-header text-center">
-        Resume
-      </div>
-      <div class="card-body">
-        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
-        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
-        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
-        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
-        
+  <h1>Page list</h1>
+  <p>This is a summary of a project that demonstrates my
+    capabilities as a layout designer</p>
+
+  <div class='row g-2'>
+    <div class='col-4'>
+      <div class='card'>
+        <div class='card-header text-center'>
+          Resume
+        </div>
+        <div class='card-body'>
+
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/summary'
+            > Summary </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/skills'
+            > Skills </a>
+          </div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/education'
+            > Education </a>
+          </div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/work'
+            > Work </a>
+          </div>
+
+        </div>
       </div>
     </div>
 
+    <div class='col-4'>
+      <div class='card'>
+        <div class='card-header text-center'>
+          Online Shop
+        </div>
+        <div class='card-body'>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shophome'
+            > Shop Home </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shopnews'
+            > Shop News </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shopproduct'
+            > Product </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shoporder'
+            > Order </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shopcart'
+            > Cart </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shopcatalog'
+            > Catalog </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shopprofile'
+            > Profile </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/shopreview'
+            > Shop review </a></div>
 
+        </div>
+      </div>
+    </div>
 
+    <div class='col-4'>
+      <div class='card'>
+        <div class='card-header text-center'>
+          Other pages
+        </div>
+        <div class='card-body'>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/bio'
+            > Bio </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/car'
+            > Car </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/facebook'
+            > Facebook </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/js'
+            > Js </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/mac'
+            > Mac </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/bio'
+            > Bio </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/person'
+            > Person </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/program'
+            > Program </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/task21'
+            > Task 21 </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/task22'
+            > Task 22 </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/task31'
+            > Task 31 </a></div>
+          <div>
+            <a
+              type='button'
+              class='btn btn-primary btn-sm mb-2'
+              href='/web'
+            > Web </a></div>
+
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col-4"></div>
-  <div class="col-4"></div>
-</div>
-  
 
-  
 </main>
 
 {{! 
