--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -15,18 +15,29 @@
 			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
 
-    {{> nav}}
+  <body>
 
-  <br />
-  <hr>
+    <header>
+
+      <div class="row px-3">
+        <div class="col-6">
+          <div> Oleksiy Verkhulevskyy </div>
+        </div>
+        <div class="col-6">
+          <div class="text-end"> Resume project </div>
+        </div>
+        </div>
+      </div>
+
+      <hr class="my-2">
+
+    </header>
 
     {{!  ↓  ця кострукція показує куди шаблонізатору треба вставляти код з container файлу   }}
     {{{body}}}
-
-    <br>
-
+    
     {{> footer}}
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 
 </html>
