buttons line up and color badges added

--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -4,46 +4,54 @@
  }}
 
 <main>
+  <style>
+    .hdl { background:rgb(255, 94, 0);} .bts {
+    background:rgb(114, 9, 250); } .htm {
+    background:rgb(142, 142, 143); }
+  </style>
 
   <h1>Page list</h1>
-  <p>This is a summary of a project that demonstrates my
-    capabilities as a layout designer</p>
+  <p><i>This is a summary of a project that demonstrates my
+      capabilities as a layout designer</i></p>
 
   <div class='row g-2'>
     <div class='col-4'>
       <div class='card'>
         <div class='card-header text-center'>
           Resume
-        </div>
-        <div class='card-body'>
+          <div><span
+              class='badge htm rounded-pill mt-0'
+            >HTML</span>
+            <span
+              class='badge hdl rounded-pill mt-0'
+            >Handlebars</span></div>
 
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/summary'
-            > Summary </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/skills'
-            > Skills </a>
-          </div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/education'
-            > Education </a>
-          </div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/work'
-            > Work </a>
-          </div>
+        </div>
+        <div class='card-body d-grid gap-2'>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/summary'
+          > Summary </a>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/skills'
+          > Skills </a>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/education'
+          > Education </a>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/work'
+          > Work </a>
 
         </div>
       </div>
@@ -53,56 +61,57 @@
       <div class='card'>
         <div class='card-header text-center'>
           Online Shop
+          <div><span
+              class='badge hdl rounded-pill mt-0'
+            >Handlebars</span>
+
+            <span
+              class='badge bts rounded-pill mt-0'
+            >Bootstrap</span></div>
         </div>
-        <div class='card-body'>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shophome'
-            > Shop Home </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shopnews'
-            > Shop News </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shopproduct'
-            > Product </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shoporder'
-            > Order </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shopcart'
-            > Cart </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shopcatalog'
-            > Catalog </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shopprofile'
-            > Profile </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/shopreview'
-            > Shop review </a></div>
+        <div class='card-body d-grid gap-2'>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shophome'
+          > Shop Home </a>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shopnews'
+          > Shop News </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shopproduct'
+          > Product </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shoporder'
+          > Order </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shopcart'
+          > Cart </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shopcatalog'
+          > Catalog </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shopprofile'
+          > Profile </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/shopreview'
+          > Shop review </a>
 
         </div>
       </div>
@@ -112,80 +121,71 @@
       <div class='card'>
         <div class='card-header text-center'>
           Other pages
+          <div><span
+              class='badge hdl rounded-pill mt-0'
+            >Handlebars</span>
+
+            <span
+              class='badge bts rounded-pill mt-0'
+            >Bootstrap</span></div>
         </div>
-        <div class='card-body'>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/bio'
-            > Bio </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/car'
-            > Car </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/facebook'
-            > Facebook </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/js'
-            > Js </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/mac'
-            > Mac </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/bio'
-            > Bio </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/person'
-            > Person </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/program'
-            > Program </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/task21'
-            > Task 21 </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/task22'
-            > Task 22 </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/task31'
-            > Task 31 </a></div>
-          <div>
-            <a
-              type='button'
-              class='btn btn-primary btn-sm mb-2'
-              href='/web'
-            > Web </a></div>
+        <div class='card-body d-grid gap-2'>
+
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/bio'
+          > Bio </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/car'
+          > Car </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/facebook'
+          > Facebook </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/js'
+          > Js </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/mac'
+          > Mac </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/person'
+          > Person </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/program'
+          > Program </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/task21'
+          > Task 21 </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/task22'
+          > Task 22 </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/task31'
+          > Task 31 </a>
+          <a
+            type='button'
+            class='btn btn-primary btn-sm'
+            href='/web'
+          > Web </a>
 
         </div>
       </div>
